--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.20.0",
     "@auth0/auth0-react": "^2.2.4",
-    "@aws-amplify/ui-react": "^6.1.6",
+    "@aws-amplify/ui-react": "^6.1.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^6.0.21",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mysql": "^2.18.1",
+    "aws-amplify": "^6.0.19",
+    "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
+    "firebase": "^10.8.1",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.1",
-    "react-scripts": "^5.0.1",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.7.20",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
+    "server": "file:..",
+    "tailwindcss": "^3.0.24",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
